<resources>
    <string name="app_name">SMControl</string>
    <string name="msg_bienvenido">¡Bienvenido!</string>
    <string name="txt_email">Ingrese su correo</string>
    <string name="txt_pass">Ingrese su contraseña</string>
    <string name="btn_ingresar">INGRESAR</string>
    <string name="menu">Menu</string>
    <string name="trabajadores">Trabajadores</string>
    <string name="productos">Productos</string>
    <string name="reportes">Reportes</string>
    <string name="Categorias">Categorias</string>
    <string name="Proveedores">Proveedores</string>
    <string name="Inicio">Inicio</string>
    <string name="salir">Salir</string>
    <string name="Entradas">Entradas</string>
    <string name="Salidas">Salidas</string>
    <string name="Productos">Productos</string>
    <string name="historial">Historial</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>

    <string-array name="roles">
        <item>Administrador</item>
        <item>Almacenero</item>
    </string-array>

    <string name="gestionar_trabajador">Gestionar Trabajador</string>
    <string name="gestionar_proveedor">Gestionar Proveedor</string>
    <string name="gestionar_categoria">Gestionar Categoria</string>
    <string name="gestionar_producto">Gestionar Producto</string>
    <string name="gestionar_salida">Gestionar Salida</string>
    <string name="gestionar_entrada">Gestionar Entrada</string>
    <string name="lista_trabajadores">Trabajadores</string>
</resources>