<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/Inicio"
            android:icon="@drawable/home" />
        <item
            android:id="@+id/nav_trabajador"
            android:title="@string/trabajadores"
            android:icon="@drawable/usuario"/>
        <item
            android:id="@+id/nav_producto"
            android:title="@string/productos"
            android:icon="@drawable/producto"/>
        <item
            android:id="@+id/nav_categoria"
            android:title="@string/Categorias"
            android:icon="@drawable/cat"/>
        <item
            android:id="@+id/nav_proveedor"
            android:title="@string/Proveedores"
            android:icon="@drawable/proveedor"/>
        <item
            android:id="@+id/nav_reporte"
            android:title="@string/reportes"
            android:icon="@drawable/reporte"/>

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_salir"
            android:title="@string/salir"
            android:icon="@drawable/salir"/>

    </group>

</menu>