<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/Inicio"
            android:icon="@drawable/home" />
        <item
            android:id="@+id/nav_Entradas"
            android:title="@string/Entradas"
            android:icon="@drawable/outbox"/>
        <item
            android:id="@+id/nav_Salidas"
            android:title="@string/Salidas"
            android:icon="@drawable/salidass"/>
        <item
            android:id="@+id/nav_Almacen"
            android:title="@string/productos"
            android:icon="@drawable/producto"/>
        <item
            android:id="@+id/nav_ReporteAlmacenero"
            android:title="@string/reportes"
            android:icon="@drawable/reportes"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_salir"
            android:title="@string/salir"
            android:icon="@drawable/salir"/>

    </group>

</menu>