<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_below="@+id/imageView_ico"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/input_email"
        android:ems="10"
        android:fontFamily="@font/reem_kufi"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/txt_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_below="@+id/et_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:background="@drawable/input_pass2"
        android:ems="10"
        android:fontFamily="@font/reem_kufi"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/txt_pass"
        android:inputType="textPassword"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btningresar"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_pass"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/btn_logear"
        android:fontFamily="@font/reem_kufi"
        android:text="@string/btn_ingresar"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:backgroundTint="@color/teal_200" />

    <ImageView
        android:id="@+id/imageView_ico"
        android:layout_width="299dp"
        android:layout_height="153dp"
        android:layout_below="@+id/imageView_cabecera"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/icoprincipal_carga" />

    <ImageView
        android:id="@+id/imageView_cabecera"
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cabecera_img" />

</RelativeLayout>