<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    tools:context=".Acceso">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="380dp">

            <View
                android:id="@+id/topView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/teal_1" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/wave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/reem_kufi"
                android:gravity="center"
                android:text="@string/msg_bienvenido"
                android:textColor="@color/white"
                android:textSize="65sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.169" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="301dp"
                android:layout_height="226dp"
                android:layout_gravity="center"
                android:layout_marginTop="56dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/montacarga"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topView" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_email"
                app:hintTextColor="@color/hint"
                app:boxStrokeColor="@color/teal_1"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/person_outline"
                app:startIconTint="@color/teal_1"
                app:endIconMode="clear_text"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconTint="@color/teal_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_correo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/reem_kufi"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_pass"
                app:hintTextColor="@color/hint"
                app:boxStrokeColor="@color/teal_1"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/lock_outline"
                app:startIconTint="@color/teal_1"
                app:endIconMode="password_toggle"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconTint="@color/teal_1">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/reem_kufi"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:height="55dp"
                android:backgroundTint="@color/teal_1"
                android:fontFamily="@font/reem_kufi"
                android:onClick="validacion"
                android:text="@string/btn_ingresar"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/teal_1"
                app:cornerRadius="8dp" />




        </LinearLayout>




    </LinearLayout>


</ScrollView>