<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <View
                android:id="@+id/topView"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@color/teal_1"
                tools:ignore="MissingConstraints" />


            <ImageView
                android:id="@+id/menu_icon"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/menu_icon"
                android:fontFamily="@font/reem_kufi"
                android:text="@string/menu"
                android:textColor="@color/white"
                android:textSize="28dp" />

            <GridLayout
                android:layout_marginTop="80dp"
                android:layout_marginBottom="20dp"
                android:columnCount="2"
                android:rowCount="3"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <androidx.cardview.widget.CardView
                    android:id="@+id/cardTrabajador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/trabajador"/>

                        <TextView
                            android:layout_marginTop="12dp"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            android:text="@string/trabajadores"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardProducto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/estante"/>

                        <TextView
                            android:layout_marginTop="12dp"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            android:text="@string/productos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/carreta"/>

                        <TextView
                            android:layout_marginTop="12dp"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            android:text="@string/Categorias"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardProveedor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/camion"/>

                        <TextView
                            android:layout_marginTop="12dp"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            android:text="@string/Proveedores"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardReporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="16dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/lista"/>

                        <TextView
                            android:layout_marginTop="12dp"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            android:text="@string/reportes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

        </RelativeLayout>



    </LinearLayout>


</ScrollView>